Pagamentos + padronização requests e responses
