# src/main/java/com/sensedia/payment/request/ClientRequest.java
@@ -11,6 +11,6 @@ public class ClientRequest {
   private String name;
   private String email;
   private String phone;
-  private Integer payday;
+  private Integer expirationDay;
 
 }
