# src/main/java/com/sensedia/payment/request/PaymentRequest.java
@@ -1,0 +1,20 @@
+package com.sensedia.payment.request;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class PaymentRequest {
+	
+	private String debitId;
+	
+	private Integer installments;
+	
+	private String cardNumber;
+
+}
